--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,4 @@
 v0.1.0-alpha  Initial build
 v0.1.1-alpha  Added Github releases build
 v0.1.2-alpha  Attempting another jar folder on travis
+v0.1.3-alpha  Minor Javadoc problem fixed
